corrected line break on popup

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -585,6 +585,13 @@ body {
     width: 70vh;
     height: 20vw; }
 
+  .popupCheckNames {
+    width: 80vh !important;
+    height: 30vw !important;
+    background-color: #ff6600;
+    color: white;
+    text-align: center; }
+
   #howToModal {
     width: 94vw; }
 
